PRD v.2.4.2 hotfix: loader binding contact
